<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro_usuario">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="1dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_view"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/txt_nombreU"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txt_nombre"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/txt_passU"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txt_password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/txt_emailU"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txt_email"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/txt_edadU"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txt_edad"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/botton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="Registrar"
            android:text="bb" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>